--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "formik": "^2.2.9",
     "lottie-react-native": "^5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
