--- a/ShopApp/react-native-vector-icons/package.json
+++ b/ShopApp/react-native-vector-icons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopapp",
+  "name": "react-native-vector-icons",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,24 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
-    "@react-navigation/native": "^6.0.8",
-    "@react-navigation/stack": "^6.1.1",
-    "axios": "^0.26.1",
-    "config": "^3.3.7",
-    "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "formik": "^2.2.9",
-    "lottie-react-native": "^5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-config": "^1.4.5",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
