--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
     "config": "^3.3.7",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-app-loader-provider": "~8.0.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
     "lottie-react-native": "^5.0.1",
@@ -28,7 +30,10 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
