--- a/ShopApp/.env
+++ b/ShopApp/.env
@@ -1,1 +1,6 @@
-API_URL=https://fakestoreapi.com/products
+API_KEY="AIzaSyDC2D7nYV_aP1JmWK5oRl-XBKExTMjeqQY"
+AUTH_DOMAIN="shopapppatika.firebaseapp.com"
+PROJECT_ID="shopapppatika"
+STORAGE_BUCKET="shopapppatika.appspot.com"
+MESSAGING_SENDER_ID="976991780324"
+APP_ID="1:976991780324:web:65ccf4543c72ea9d655bf1"
