--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -12,17 +12,23 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "auth": "^0.0.9",
+    "auth-setup": "^1.0.6",
     "axios": "^0.26.1",
     "config": "^3.3.7",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-app-loader-provider": "~8.0.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.11",
+    "firebase-auth": "^0.1.2",
     "formik": "^2.2.9",
     "lottie-react-native": "^5.0.1",
+    "npm-auth": "^1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
