--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -27,6 +27,7 @@
     "firebase": "^9.6.11",
     "firebase-auth": "^0.1.2",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.0.1",
     "npm-auth": "^1.1.0",
     "react": "17.0.1",
@@ -40,7 +41,12 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "storage": "^0.2.0",
+    "yup": "^0.32.11",
+    "expo-secure-store": "~11.1.0",
+    "expo-constants": "~13.0.1",
+    "react-native-pager-view": "5.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
