--- a/ShopApp/app.json
+++ b/ShopApp/app.json
@@ -8,7 +8,7 @@
     "splash": {
       "image": "./src/assets/shopping-cart.png",
       "resizeMode": "contain",
-      "backgroundColor": "#990066"
+      "backgroundColor": "#00695C"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
