--- a/ShopApp/app.json
+++ b/ShopApp/app.json
@@ -10,6 +10,14 @@
       "resizeMode": "contain",
       "backgroundColor": "#00695C"
     },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ],
     "updates": {
       "fallbackToCacheTimeout": 0
     },
