--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-app-loader-provider": "~8.0.0",
+    "expo-constants": "~13.0.1",
+    "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.11",
     "firebase-auth": "^0.1.2",
@@ -35,18 +37,19 @@
     "react-native": "0.64.3",
     "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-picker": "^4.8.2",
+    "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "storage": "^0.2.0",
     "yup": "^0.32.11",
-    "expo-secure-store": "~11.1.0",
-    "expo-constants": "~13.0.1",
-    "react-native-pager-view": "5.4.9"
+    "expo-image-picker": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
