--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "auth": "^0.0.9",
@@ -24,6 +25,7 @@
     "expo": "~44.0.0",
     "expo-app-loader-provider": "~8.0.0",
     "expo-constants": "~13.0.1",
+    "expo-image-picker": "~12.0.1",
     "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.11",
@@ -49,7 +51,7 @@
     "redux-thunk": "^2.4.1",
     "storage": "^0.2.0",
     "yup": "^0.32.11",
-    "expo-image-picker": "~12.0.1"
+    "react-native-reanimated": "~2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
