--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.7.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
@@ -28,7 +29,7 @@
     "expo-image-picker": "~12.0.1",
     "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.11",
+    "firebase": "^9.8.0",
     "firebase-auth": "^0.1.2",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
@@ -41,7 +42,8 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-picker": "^4.8.2",
     "react-native-pager-view": "5.4.9",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
@@ -50,8 +52,8 @@
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "storage": "^0.2.0",
-    "yup": "^0.32.11",
-    "react-native-reanimated": "~2.3.1"
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
