--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -32,6 +32,7 @@
     "firebase": "^9.8.0",
     "firebase-auth": "^0.1.2",
     "formik": "^2.2.9",
+    "idb-keyval": "^6.1.0",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.0.1",
     "npm-auth": "^1.1.0",
@@ -39,6 +40,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-config": "^1.4.5",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-picker": "^4.8.2",
     "react-native-pager-view": "5.4.9",
