--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -43,6 +43,7 @@
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-picker": "^4.8.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "^3.3.2",
