--- a/ShopApp/package.json
+++ b/ShopApp/package.json
@@ -40,6 +40,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-config": "^1.4.5",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-picker": "^4.8.2",
